# SQLeo_Studio

./: ChangeLog.md  InnoSetupScript.iss  Letos-installer.xml  README.md
Letos/: CMakeLists.txt  create_macosx_bundle.sh  create_source_dist.sh  lang.tcl
Letos/Tests/CompletionHelperTest/: CMakeLists.txt  tst_completionhelpertest.cpp
Letos/Tests/DsvFormatsTest/: CMakeLists.txt
Letos/Tests/FormatterTest/: CMakeLists.txt  tst_formattertest.cpp
Letos/Tests/HashTablesTest/: CMakeLists.txt
Letos/Tests/LexerTest/: CMakeLists.txt
Letos/Tests/ParserTest/: CMakeLists.txt
Letos/Tests/SelectResolverTest/: CMakeLists.txt
Letos/Tests/SqlFileExecutorTest/: CMakeLists.txt
Letos/Tests/TableModifierTest/: CMakeLists.txt  tst_tablemodifiertest.cpp
Letos/Tests/TestUtils/: CMakeLists.txt  configmock.cpp  configmock.h  mocks.cpp
Letos/Tests/UtilsTest/: CMakeLists.txt
Letos/cmake/: common.cmake  custom_sqlite3.cmake  dirs.cmake  plugins.cmake  version.cmake
Letos/core/: CMakeLists.txt  committable.h  completionhelper.cpp  config_builder.h  core.qrc  core_global.h  csvformat.h  csvserializer.h  datatype.h  dbattacher.h  dbobjectorganizer.cpp  dbobjectorganizer.h  ddlhistorymodel.h  expectedtoken.h  letos.cpp  letos.h  log.h  pluginservicebase.h  qio.h  schemaresolver.h  sqlfileexecutor.cpp  sqlfileexecutor.h  tablemodifier.cpp  translations.cpp  translations.h  tsvserializer.h  viewmodifier.cpp
Letos/core/common/: bigdec.h  bistrhash.h  blockingsocket.h  collections.h  column.h  lazytrigger.h  readwritelocker.h  table.h  utils.h  utils_sql.cpp  utils_sql.h  xmldeserializer.h
Letos/core/config_builder/: cfgcategory.h  cfgentry.h  cfglazyinitializer.h  cfgmain.h
Letos/core/db/: abstractdb.cpp  abstractdb.h  abstractdb3.h  db.h  queryexecutor.cpp  queryexecutor.h  sqlerrorcodes.cpp  sqlerrorcodes.h  sqlquery.h  sqlresultsrow.h
Letos/core/diff/: diff_match_patch.h
Letos/core/licenses/: gpl.txt  sqlitestudio_license.txt
Letos/core/parser/: keywords.h  lexer.h  lexer_low_lev.h  parsererror.h  token.h
Letos/core/plugins/: builtinplugin.h  codeformatterplugin.h  dbpluginsqlite3.h  exportplugin.h  genericplugin.h  plugin.h  pluginsymbolresolver.h  plugintype.h  populateconstant.h  populatedictionary.h  populateplugin.h  populaterandom.h  populaterandomtext.h  populatescript.h  populatescript.ui  populatesequence.h  scriptingqt.h  scriptingsql.h  sqlformatterplugin.h  uiconfiguredplugin.h
Letos/core/rsa/: BigInt.h  Key.h  KeyPair.h  PrimeGenerator.h  RSA.h
Letos/core/services/: codeformatter.h  codesnippetmanager.h  collationmanager.h  config.cpp  config.h  dbmanager.h  exportmanager.h  extralicensemanager.h  functionmanager.h  importmanager.h  pluginmanager.h  populatemanager.h  sqliteextensionmanager.h  updatemanager.cpp  updatemanager.h
Letos/core/translations/: core.ts  core_af_ZA.ts  core_ar_SA.ts  core_be_BY.ts  core_ca_ES.ts  core_cs_CZ.ts  core_da_DK.ts  core_de_DE.ts  core_el_GR.ts  core_en_US.ts  core_es_ES.ts  core_fa_IR.ts  core_fi_FI.ts  core_fr_FR.ts  core_he_IL.ts  core_hu_HU.ts  core_it_IT.ts  core_ja_JP.ts  core_kaa.ts  core_ko_KR.ts  core_nl_NL.ts  core_no_NO.ts  core_pl_PL.ts  core_pt_BR.ts  core_pt_PT.ts  core_ro_RO.ts  core_ru_RU.ts  core_sk_SK.ts  core_sr_SP.ts  core_sv_SE.ts  core_tr_TR.ts  core_uk_UA.ts  core_vi_VN.ts  core_zh_CN.ts  core_zh_TW.ts
Letos/gui/: CMakeLists.txt  codesnippetspanel.cpp  configmapper.h  customconfigwidgetplugin.h  dataview.h  dblistmodel.h  dbobjectdialogs.h  dbobjlistmodel.h  debugconsole.cpp  debugconsole.h  debugconsole.ui  extendedpalette.h  formmanager.cpp  formmanager.h  formview.h  gui_global.h  icon.h  iconmanager.cpp  iconmanager.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  mdiarea.h  mdiwindow.cpp  mdiwindow.h  qtscriptsyntaxhighlighter.cpp  qtscriptsyntaxhighlighter.h  searchtextlocator.h  selectabledbmodel.h  selectabledbobjmodel.h  sqlcompareview.h  sqleditor.cpp  sqleditor.h  sqlitesyntaxhighlighter.h  sqlview.h  statusfield.h  style.h  syntaxhighlighterplugin.h  taskbar.h  (+13 more)
Letos/gui/common/: bindparam.h  centerediconitemdelegate.h  colorbutton.h  (+25 more)
Letos/letos/: CMakeLists.txt  Info.plist.in  letos.desktop  main.cpp  windows.rc.in
Letos/letoscli/: CMakeLists.txt  cli.cpp  main.cpp
(+644 files in other folders)
